--- a/assets/narrow.css
+++ b/assets/narrow.css
@@ -22,6 +22,9 @@
 
 /* Main Section Changes */
 
+#MainContent H1 {padding: 0px 10px 0px 10px; margin: 0px 0px -10px 0px;}
+#MainContent H2 {padding: 25px 10px 5px 10px; margin: 30px 0px 15px 0px;}
+
 #MainContent {margin-left: 0px; margin-top: 0px;}
 #MainContent .icon IMG {clear: both; display: block; width: 100%; min-width: 360px; max-width: calc(80% - 25px); margin: 15px auto 20px auto;}
 
