--- a/assets/wide.css
+++ b/assets/wide.css
@@ -22,6 +22,9 @@
 
 /* Main Section Changes */
 
+#MainContent H1 {padding: 10px 10px 0px 10px; margin: 0px 0px 0px 0px;}
+#MainContent H2 {padding: 25px 10px 5px 10px; margin: 25px 0px 15px 0px;}
+
 #MainContent .post:before {content: ''; float: right; display: block; width: 250px; height: 175px; margin: 0px 15px 45px 45px;}
 #MainContent .post {position: relative;}
 
